Fix spacing problem with columns
Remove a style rule that was resulting in incorrect spacing under certain conditions.

--- a/section.less
+++ b/section.less
@@ -16,22 +16,23 @@
 /**   ───────────────────────────────────────────────────────────────────────────────────────────
 ***   TABLE OF CONTENTS:
 ***   ───────────────────────────────────────────────────────────────────────────────────────────
-***   OUE-SECTIONS §1: Utility classes.........................................................34
-***   OUE-SECTIONS §2: Legacy article headers..................................................44
-***   OUE-SECTIONS §3: Halves builder sections................................................127
-***   OUE-SECTIONS §4: Side-right builder sections............................................139
-***   OUE-SECTIONS §5: Thirds builder sections................................................151
-***   OUE-SECTIONS §6: Section coloring.......................................................188
-***   OUE-SECTIONS §7: Spacing overrides to improve responsive design.........................222
-***   OUE-SECTIONS §8: Gutter padding overrides to improve mobile design......................308
-***   OUE-SECTIONS §9: Column stacking overrides to improve mobile design.....................529
-***   OUE-SECTIONS §10: Linked column styling.................................................551
-**    OUE-SECTIONS §11: Accessibility friendly utility classes...............................1434
-**      >>> §11.1: Font-sizing variables for columns.........................................1438
-**      >>> §11.2: Default font sizes for column elements....................................1452
+***   OUE-SECTIONS §1: Utility classes.........................................................37
+***   OUE-SECTIONS §2: Legacy article headers..................................................47
+***   OUE-SECTIONS §3: Halves builder sections................................................130
+***   OUE-SECTIONS §4: Side-right builder sections............................................142
+***   OUE-SECTIONS §5: Thirds builder sections................................................154
+***   OUE-SECTIONS §6: Section coloring.......................................................185
+***   OUE-SECTIONS §7: Spacing overrides to improve responsive design.........................219
+***   OUE-SECTIONS §8: Gutter padding overrides to improve mobile design......................305
+***   OUE-SECTIONS §9: Column stacking overrides to improve mobile design.....................526
+***   OUE-SECTIONS §10: Linked column styling.................................................548
+**    OUE-SECTIONS §11: Accessibility friendly utility classes...............................1431
+**      >>> §11.1: Font-sizing variables for columns.........................................1435
+**      >>> §11.2: Default font sizes for column elements....................................1449
 **/
 
 @oue-section-ruleset: {
+
 /**   ----------------------------------------------------------------------------------------------
 ***   OUE-SECTIONS §1: Utility classes
 **/
@@ -177,12 +178,6 @@
 					}
 				}
 			}
-		}
-	}
-
-	.column section:not(:last-child) {
-		& > *:last-child:not(.vpue-jump-bar) {
-			padding-bottom: 0;
 		}
 	}
 
